crates/lang/tests/ui/contract/fail/trait-impl-namespace-invalid.stderr
error: namespace ink! property is not allowed on ink! trait implementation blocks
  --> tests/ui/contract/fail/trait-impl-namespace-invalid.rs:23:5
   |
23 |     #[ink(namespace = "namespace")]
   |     ^
